# perenual-scapper

./: .gitignore  GEMINI.md  main.py  merge_data.py  pyproject.toml  test_main.py
