[project]
name = "perenual-scapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pytest>=9.0.2",
    "anyio>=4.12.1",
    "pytest-asyncio>=1.3.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "twisted>=25.5.0",
    "playwright-stealth>=2.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
